#9 Udated NSAcdress and NSAddressSyncData + linked enum AddressType

--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -15,7 +15,7 @@ items:
   - CRMScript.NetServer.actorType
   - CRMScript.NetServer.actorTypeCrm
   - CRMScript.NetServer.actorTypeErp
-  - CRMScript.NetServer.addresstype
+  - CRMScript.NetServer.AddressType
   - CRMScript.NetServer.AppntRecordTypes
   - CRMScript.NetServer.AppointmentPrivate
   - CRMScript.NetServer.appointmentType
@@ -711,12 +711,12 @@ references:
   name: NSAddressSyncData
   nameWithType: NSAddressSyncData
   fullName: CRMScript.NetServer.NSAddressSyncData
-- uid: CRMScript.NetServer.addresstype
-  commentId: T:CRMScript.NetServer.addresstype
+- uid: CRMScript.NetServer.AddressType
+  commentId: T:CRMScript.NetServer.AddressType
   isExternal: true
-  name: addresstype
-  nameWithType: addresstype
-  fullName: CRMScript.NetServer.addresstype
+  name: AddressType
+  nameWithType: AddressType
+  fullName: CRMScript.NetServer.AddressType
 - uid: CRMScript.NetServer.NSAIAgent
   commentId: T:CRMScript.NetServer.NSAIAgent
   isExternal: true
