--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1166,8 +1166,8 @@ items:
       href: CRMScript.NetServer.actorTypeCrm.yml
     - name: Enum actorTypeErp
       href: CRMScript.NetServer.actorTypeErp.yml
-    - name: Enum addresstype
-      href: CRMScript.NetServer.addresstype.yml
+    - name: AddressType
+      href: CRMScript.NetServer.AddressType.yml
     - name: Enum AppntRecordTypes
       href: CRMScript.NetServer.AppntRecordTypes.yml
     - name: Enum AppointmentPrivate
