--- a/docs/api-reference/CRMScript.NetServer.NSAddress.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddress.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSAddress
   commentId: T:CRMScript.NetServer.NSAddress
   id: NSAddress
-  so.intellisense: Void.NSAddress
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSAddress.#ctor
   - CRMScript.NetServer.NSAddress.GetLocalizedAddress()
   - CRMScript.NetServer.NSAddress.GetWgs84Latitude()
   - CRMScript.NetServer.NSAddress.GetWgs84Longitude()
-  - CRMScript.NetServer.NSAddress.#ctor
   - CRMScript.NetServer.NSAddress.SetLocalizedAddress()
   - CRMScript.NetServer.NSAddress.SetWgs84Latitude()
   - CRMScript.NetServer.NSAddress.SetWgs84Longitude()
@@ -18,55 +17,7 @@ items:
   nameWithType: NSAddress
   fullName: CRMScript.NetServer.NSAddress
   type: Class
-  summary: 
-  example: 
-- uid: CRMScript.NetServer.NSAddress.GetLocalizedAddress()
-  commentId: M:CRMScript.NetServer.NSAddress.GetLocalizedAddress()
-  id: 'GetLocalizedAddress()'
-  so.intellisense: NSAddress.GetLocalizedAddress
-  langs:
-  - crmscript
-  name: 'GetLocalizedAddress()'
-  nameWithType: NSAddress.GetLocalizedAddress()
-  fullName: CRMScript.NetServer.NSAddress.GetLocalizedAddress()
-  type: Method
-  summary: "\nNSLocalizedField[] is a list of LocalizedFieldList objects. Used to store localized information such as formatted address data.\n"
-  remarks: 
-  syntax: 
-    content: GetLocalizedAddress()
-    parameters:
-  example: 
-- uid: CRMScript.NetServer.NSAddress.GetWgs84Latitude()
-  commentId: M:CRMScript.NetServer.NSAddress.GetWgs84Latitude()
-  id: 'GetWgs84Latitude()'
-  so.intellisense: NSAddress.GetWgs84Latitude
-  langs:
-  - crmscript
-  name: 'GetWgs84Latitude()'
-  nameWithType: NSAddress.GetWgs84Latitude()
-  fullName: CRMScript.NetServer.NSAddress.GetWgs84Latitude()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetWgs84Latitude()
-    parameters:
-  example: 
-- uid: CRMScript.NetServer.NSAddress.GetWgs84Longitude()
-  commentId: M:CRMScript.NetServer.NSAddress.GetWgs84Longitude()
-  id: 'GetWgs84Longitude()'
-  so.intellisense: NSAddress.GetWgs84Longitude
-  langs:
-  - crmscript
-  name: 'GetWgs84Longitude()'
-  nameWithType: NSAddress.GetWgs84Longitude()
-  fullName: CRMScript.NetServer.NSAddress.GetWgs84Longitude()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetWgs84Longitude()
-    parameters:
+  summary: "\nCarrier object for Address.\n"
   example: 
 - uid: CRMScript.NetServer.NSAddress.#ctor
   commentId: M:CRMScript.NetServer.NSAddress.#ctor
@@ -83,6 +34,63 @@ items:
   syntax: 
     content: NSAddress
   example: 
+- uid: CRMScript.NetServer.NSAddress.GetLocalizedAddress()
+  commentId: M:CRMScript.NetServer.NSAddress.GetLocalizedAddress()
+  id: 'GetLocalizedAddress()'
+  so.intellisense: NSAddress.GetLocalizedAddress
+  langs:
+  - crmscript
+  name: 'GetLocalizedAddress()'
+  nameWithType: NSAddress.GetLocalizedAddress()
+  fullName: CRMScript.NetServer.NSAddress.GetLocalizedAddress()
+  type: Method
+  summary: "\nNSLocalizedField[] is a list of LocalizedFieldList objects. Used to store localized information such as formatted address data.\n"
+  remarks: 
+  syntax: 
+    content: GetLocalizedAddress()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSLocalizedField[][]
+      description:
+  example: 
+- uid: CRMScript.NetServer.NSAddress.GetWgs84Latitude()
+  commentId: M:CRMScript.NetServer.NSAddress.GetWgs84Latitude()
+  id: 'GetWgs84Latitude()'
+  so.intellisense: NSAddress.GetWgs84Latitude
+  langs:
+  - crmscript
+  name: 'GetWgs84Latitude()'
+  nameWithType: NSAddress.GetWgs84Latitude()
+  fullName: CRMScript.NetServer.NSAddress.GetWgs84Latitude()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Float GetWgs84Latitude()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description:
+  example: 
+- uid: CRMScript.NetServer.NSAddress.GetWgs84Longitude()
+  commentId: M:CRMScript.NetServer.NSAddress.GetWgs84Longitude()
+  id: 'GetWgs84Longitude()'
+  so.intellisense: NSAddress.GetWgs84Longitude
+  langs:
+  - crmscript
+  name: 'GetWgs84Longitude()'
+  nameWithType: NSAddress.GetWgs84Longitude()
+  fullName: CRMScript.NetServer.NSAddress.GetWgs84Longitude()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Float GetWgs84Longitude()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description:
+  example: 
 - uid: CRMScript.NetServer.NSAddress.SetLocalizedAddress()
   commentId: M:CRMScript.NetServer.NSAddress.SetLocalizedAddress()
   id: 'SetLocalizedAddress()'
@@ -96,8 +104,13 @@ items:
   summary: "\nNSLocalizedField[] is a list of LocalizedFieldList objects. Used to store localized information such as formatted address data.\n"
   remarks: 
   syntax: 
-    content: SetLocalizedAddress(NSLocalizedField[][] p_0)
+    content: Void SetLocalizedAddress(NSLocalizedField[][] list)
     parameters:
+    - id: list
+      type: CRMScript.NetServer.NSLocalizedField[][]
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAddress.SetWgs84Latitude()
   commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Latitude()
@@ -112,8 +125,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetWgs84Latitude(Float p_0)
+    content: Void SetWgs84Latitude(Float latitude)
     parameters:
+    - id: latitude
+      type: CRMScript.Global.Float
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAddress.SetWgs84Longitude()
   commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Longitude()
@@ -128,8 +146,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetWgs84Longitude(Float p_0)
+    content: SetWgs84Longitude(Float longitude)
     parameters:
+    - id: longitude
+      type: CRMScript.Global.Float
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.NetServer.NSAddress
@@ -138,3 +161,53 @@ references:
   name: NSAddress
   nameWithType: NSAddress
   fullName: CRMScript.NetServer.NSAddress
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.Global.Float
+  commentId: T:CRMScript.Global.Float
+  isExternal: true
+  name: Float
+  nameWithType: Float
+  fullName: CRMScript.Global.Float
+- uid: CRMScript.NetServer.NSLocalizedField
+  commentId: T:CRMScript.NetServer.NSLocalizedField
+  isExternal: true
+  name: NSLocalizedField
+  nameWithType: NSLocalizedField
+  fullName: CRMScript.NetServer.NSLocalizedField
+- uid: CRMScript.NetServer.NSLocalizedField[]
+  commentId: T:CRMScript.NetServer.NSLocalizedField[]
+  isExternal: true
+  name: NSLocalizedField[]
+  nameWithType: NSLocalizedField[]
+  fullName: CRMScript.NetServer.NSLocalizedField[]
+  spec.crmscript:
+  - uid: CRMScript.NetServer.NSLocalizedField
+    commentId: T:CRMScript.NetServer.NSLocalizedField
+    isExternal: true
+    name: NSLocalizedField
+    nameWithType: NSLocalizedField
+    fullName: CRMScript.NetServer.NSLocalizedField
+  - name: '[]'
+    nameWithType: '[]'
+    fullName: '[]'
+- uid: CRMScript.NetServer.NSLocalizedField[][]
+  commentId: T:CRMScript.NetServer.NSLocalizedField[][]
+  isExternal: true
+  name: NSLocalizedField[][]
+  nameWithType: NSLocalizedField[][]
+  fullName: CRMScript.NetServer.NSLocalizedField[][]
+  spec.crmscript:
+  - uid: CRMScript.NetServer.NSLocalizedField[]
+    commentId: T:CRMScript.NetServer.NSLocalizedField[]
+    isExternal: true
+    name: NSLocalizedField[]
+    nameWithType: NSLocalizedField[]
+    fullName: CRMScript.NetServer.NSLocalizedField[]
+  - name: '[]'
+    nameWithType: '[]'
+    fullName: '[]'
