--- a/docs/api-reference/CRMScript.NetServer.addresstype.yml
+++ b/docs/api-reference/CRMScript.NetServer.addresstype.yml
@@ -1,104 +1,105 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.addresstype
-  commentId: T:CRMScript.NetServer.addresstype
-  id: addresstype
+- uid: CRMScript.NetServer.AddressType
+  # Same as SuperOffice.Data.AddressType
+  commentId: T:CRMScript.NetServer.AddressType
+  id: AddressType
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.addresstype.Unknown
-  - CRMScript.NetServer.addresstype.ContactPostalAddress
-  - CRMScript.NetServer.addresstype.ContactStreetAddress
-  - CRMScript.NetServer.addresstype.PersonPrivateAddress
-  - CRMScript.NetServer.addresstype.QuoteBillingAddress
-  - CRMScript.NetServer.addresstype.QuoteShippingAddress
-  name: addresstype
-  nameWithType: addresstype
-  fullName: CRMScript.NetServer.addresstype
+  - CRMScript.NetServer.AddressType.Unknown
+  - CRMScript.NetServer.AddressType.ContactPostalAddress
+  - CRMScript.NetServer.AddressType.ContactStreetAddress
+  - CRMScript.NetServer.AddressType.PersonPrivateAddress
+  - CRMScript.NetServer.AddressType.QuoteBillingAddress
+  - CRMScript.NetServer.AddressType.QuoteShippingAddress
+  name: AddressType
+  nameWithType: AddressType
+  fullName: CRMScript.NetServer.AddressType
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.addresstype.Unknown
-  commentId: F:CRMScript.NetServer.addresstype.Unknown
-  id: addresstype.Unknown
+  summary: "\nThe type of Address.\n"
+- uid: CRMScript.NetServer.AddressType.Unknown
+  commentId: F:CRMScript.NetServer.AddressType.Unknown
+  id: AddressType.Unknown
   langs:
   - crmscript
-  name: addresstype.Unknown
-  nameWithType: addresstype.Unknown
-  fullName: CRMScript.NetServer.addresstype.Unknown
+  name: AddressType.Unknown
+  nameWithType: AddressType.Unknown
+  fullName: CRMScript.NetServer.AddressType.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: Unknown - used when initializing.\n"
   syntax: 
     content: Unknown = 0
-    type: CRMScript.NetServer.addresstype
-- uid: CRMScript.NetServer.addresstype.ContactPostalAddress
-  commentId: F:CRMScript.NetServer.addresstype.ContactPostalAddress
-  id: addresstype.ContactPostalAddress
+    type: CRMScript.NetServer.AddressType
+- uid: CRMScript.NetServer.AddressType.ContactPostalAddress
+  commentId: F:CRMScript.NetServer.AddressType.ContactPostalAddress
+  id: AddressType.ContactPostalAddress
   langs:
   - crmscript
-  name: addresstype.ContactPostalAddress
-  nameWithType: addresstype.ContactPostalAddress
-  fullName: CRMScript.NetServer.addresstype.ContactPostalAddress
+  name: AddressType.ContactPostalAddress
+  nameWithType: AddressType.ContactPostalAddress
+  fullName: CRMScript.NetServer.AddressType.ContactPostalAddress
   type: Field
-  summary: "\n1: ContactPostalAddress\n"
+  summary: "\n1: ContactPostalAddress. The address is a contact&apos;s postal address.\n"
   syntax: 
     content: ContactPostalAddress = 1
-    type: CRMScript.NetServer.addresstype
-- uid: CRMScript.NetServer.addresstype.ContactStreetAddress
-  commentId: F:CRMScript.NetServer.addresstype.ContactStreetAddress
-  id: addresstype.ContactStreetAddress
+    type: CRMScript.NetServer.AddressType
+- uid: CRMScript.NetServer.AddressType.ContactStreetAddress
+  commentId: F:CRMScript.NetServer.AddressType.ContactStreetAddress
+  id: AddressType.ContactStreetAddress
   langs:
   - crmscript
-  name: addresstype.ContactStreetAddress
-  nameWithType: addresstype.ContactStreetAddress
-  fullName: CRMScript.NetServer.addresstype.ContactStreetAddress
+  name: AddressType.ContactStreetAddress
+  nameWithType: AddressType.ContactStreetAddress
+  fullName: CRMScript.NetServer.AddressType.ContactStreetAddress
   type: Field
-  summary: "\n2: ContactStreetAddress\n"
+  summary: "\n2: ContactStreetAddress. The address is a contact&apos;s street address.\n"
   syntax: 
     content: ContactStreetAddress = 2
-    type: CRMScript.NetServer.addresstype
-- uid: CRMScript.NetServer.addresstype.PersonPrivateAddress
-  commentId: F:CRMScript.NetServer.addresstype.PersonPrivateAddress
-  id: addresstype.PersonPrivateAddress
+    type: CRMScript.NetServer.AddressType
+- uid: CRMScript.NetServer.AddressType.PersonPrivateAddress
+  commentId: F:CRMScript.NetServer.AddressType.PersonPrivateAddress
+  id: AddressType.PersonPrivateAddress
   langs:
   - crmscript
-  name: addresstype.PersonPrivateAddress
-  nameWithType: addresstype.PersonPrivateAddress
-  fullName: CRMScript.NetServer.addresstype.PersonPrivateAddress
+  name: AddressType.PersonPrivateAddress
+  nameWithType: AddressType.PersonPrivateAddress
+  fullName: CRMScript.NetServer.AddressType.PersonPrivateAddress
   type: Field
-  summary: "\n16387: PersonPrivateAddress\n"
+  summary: "\n16387: PersonPrivateAddress. The address is a person&apos;s private address.\n"
   syntax: 
     content: PersonPrivateAddress = 16387
-    type: CRMScript.NetServer.addresstype
-- uid: CRMScript.NetServer.addresstype.QuoteBillingAddress
-  commentId: F:CRMScript.NetServer.addresstype.QuoteBillingAddress
-  id: addresstype.QuoteBillingAddress
+    type: CRMScript.NetServer.AddressType
+- uid: CRMScript.NetServer.AddressType.QuoteBillingAddress
+  commentId: F:CRMScript.NetServer.AddressType.QuoteBillingAddress
+  id: AddressType.QuoteBillingAddress
   langs:
   - crmscript
-  name: addresstype.QuoteBillingAddress
-  nameWithType: addresstype.QuoteBillingAddress
-  fullName: CRMScript.NetServer.addresstype.QuoteBillingAddress
+  name: AddressType.QuoteBillingAddress
+  nameWithType: AddressType.QuoteBillingAddress
+  fullName: CRMScript.NetServer.AddressType.QuoteBillingAddress
   type: Field
   summary: "\n8196: QuoteBillingAddress\n"
   syntax: 
     content: QuoteBillingAddress = 8196
-    type: CRMScript.NetServer.addresstype
-- uid: CRMScript.NetServer.addresstype.QuoteShippingAddress
-  commentId: F:CRMScript.NetServer.addresstype.QuoteShippingAddress
-  id: addresstype.QuoteShippingAddress
+    type: CRMScript.NetServer.AddressType
+- uid: CRMScript.NetServer.AddressType.QuoteShippingAddress
+  commentId: F:CRMScript.NetServer.AddressType.QuoteShippingAddress
+  id: AddressType.QuoteShippingAddress
   langs:
   - crmscript
-  name: addresstype.QuoteShippingAddress
-  nameWithType: addresstype.QuoteShippingAddress
-  fullName: CRMScript.NetServer.addresstype.QuoteShippingAddress
+  name: AddressType.QuoteShippingAddress
+  nameWithType: AddressType.QuoteShippingAddress
+  fullName: CRMScript.NetServer.AddressType.QuoteShippingAddress
   type: Field
-  summary: "\n8197: QuoteShippingAddress\n"
+  summary: "\n8197: QuoteShippingAddress. The address is the shipping address for a quote.\n"
   syntax: 
     content: QuoteShippingAddress = 8197
-    type: CRMScript.NetServer.addresstype
+    type: CRMScript.NetServer.AddressType
 references:
-- uid: CRMScript.NetServer.addresstype
-  commentId: T:CRMScript.NetServer.addresstype
+- uid: CRMScript.NetServer.AddressType
+  commentId: T:CRMScript.NetServer.AddressType
   isExternal: true
-  name: addresstype
-  nameWithType: addresstype
-  fullName: CRMScript.NetServer.addresstype
+  name: AddressType
+  nameWithType: AddressType
+  fullName: CRMScript.NetServer.AddressType
