--- a/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
@@ -593,3 +593,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
+  isExternal: true
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
