--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -1130,7 +1130,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetContactAppointmentsByType(Integer,Integer,Integer)
   type: Method
   summary: "\nMethod that returns a specified number of appointments of a specific appointment type within a time range. The appointments belong to the contact specified. If the logged on user is not allowed to view this contacts appointments an exception is thrown.\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: NSAppointment[] GetContactAppointmentsByType(Integer contactId, DateTime startTime, DateTime endTime, Integer count, Integer appointmentType)
     parameters:
@@ -1482,7 +1482,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetPersonAppointmentsByType(Integer,Bool,Integer,Integer)
   type: Method
   summary: "\nMethod that returns a specified number of appointments of a specific appointment type within a time range. The appointments belong to the person specified.\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: NSAppointment[] GetPersonAppointmentsByType(Integer personId, Bool includeProjectAppointments, DateTime startTime, DateTime endTime, Integer count, Integer appointmentType)
     parameters:
@@ -1672,7 +1672,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetProjectAppointmentsByType(Integer,Integer,Integer)
   type: Method
   summary: "\nMethod that returns a specified number of appointments of a specific appointment type within a time range. The appointments belong to the project specified.\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: NSAppointment[] GetProjectAppointmentsByType(Integer projectId, DateTime startTime, DateTime endTime, Integer count, Integer appointmentType)
     parameters:
@@ -1809,7 +1809,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetProjectMemberAppointmentsByType(Integer,Integer,Integer)
   type: Method
   summary: "\nMethod that returns a specified number of appointments of a specific appointment type within a time range. The appointments belong to the projects where the person specified is member.\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: NSAppointment[] GetProjectMemberAppointmentsByType(Integer personId, DateTime startTime, DateTime endTime, Integer count, Integer appointmentType)
     parameters:
@@ -2791,3 +2791,9 @@ references:
   name: NSRecurrenceDate
   nameWithType: NSRecurrenceDate
   fullName: CRMScript.NetServer.NSRecurrenceDate
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
+  isExternal: true
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
