--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -1267,7 +1267,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentEntity.SetType(Integer)
   type: Method
   summary: "\nIs this a normal document or a mail-merge or report?\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetType(Integer type)
     parameters:
@@ -1480,3 +1480,9 @@ references:
   name: NSVisibleFor
   nameWithType: NSVisibleFor
   fullName: CRMScript.NetServer.NSVisibleFor
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
+  isExternal: true
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
