--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -18,7 +18,7 @@ items:
   - CRMScript.NetServer.AddressType
   - CRMScript.NetServer.AppntRecordTypes
   - CRMScript.NetServer.AppointmentPrivate
-  - CRMScript.NetServer.appointmentType
+  - CRMScript.NetServer.AppointmentType
   - CRMScript.NetServer.archivedState
   - CRMScript.NetServer.assignmentStatus
   - CRMScript.NetServer.associateType
@@ -89,7 +89,6 @@ items:
   - CRMScript.NetServer.NSAddressSyncData
   - CRMScript.NetServer.NSAIAgent
   - CRMScript.NetServer.NSAlarmData
-  - CRMScript.NetServer.NSAlarmDataList
   - CRMScript.NetServer.NSAmountClassEntity
   - CRMScript.NetServer.NSAppointment
   - CRMScript.NetServer.NSAppointmentAgent
@@ -729,12 +728,12 @@ references:
   name: NSAlarmData
   nameWithType: NSAlarmData
   fullName: CRMScript.NetServer.NSAlarmData
-- uid: CRMScript.NetServer.appointmentType
-  commentId: T:CRMScript.NetServer.appointmentType
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
   isExternal: true
-  name: appointmentType
-  nameWithType: appointmentType
-  fullName: CRMScript.NetServer.appointmentType
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
 - uid: CRMScript.NetServer.assignmentStatus
   commentId: T:CRMScript.NetServer.assignmentStatus
   isExternal: true
@@ -753,12 +752,6 @@ references:
   name: invitationStatus
   nameWithType: invitationStatus
   fullName: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.NSAlarmDataList
-  commentId: T:CRMScript.NetServer.NSAlarmDataList
-  isExternal: true
-  name: NSAlarmDataList
-  nameWithType: NSAlarmDataList
-  fullName: CRMScript.NetServer.NSAlarmDataList
 - uid: CRMScript.NetServer.NSAmountClassEntity
   commentId: T:CRMScript.NetServer.NSAmountClassEntity
   isExternal: true
