--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -158,8 +158,6 @@ items:
     href: CRMScript.NetServer.NSAIAgent.yml
   - name: NSAlarmData
     href: CRMScript.NetServer.NSAlarmData.yml
-  - name: NSAlarmDataList
-    href: CRMScript.NetServer.NSAlarmDataList.yml
   - name: NSAmountClassEntity
     href: CRMScript.NetServer.NSAmountClassEntity.yml
   - name: NSAppointment
@@ -1172,8 +1170,8 @@ items:
       href: CRMScript.NetServer.AppntRecordTypes.yml
     - name: Enum AppointmentPrivate
       href: CRMScript.NetServer.AppointmentPrivate.yml
-    - name: Enum appointmentType
-      href: CRMScript.NetServer.appointmentType.yml
+    - name: AppointmentType
+      href: CRMScript.NetServer.AppointmentType.yml
     - name: Enum archivedState
       href: CRMScript.NetServer.archivedState.yml
     - name: Enum assignmentStatus
