--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -2195,7 +2195,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentEntity.SetType(Integer)
   type: Method
   summary: "\nThe different types of appointment, if the appointment is supposed to be shown in the diary or checklist, or if it's a document. See the different types of appointments in the database manual.\n"
-  remarks: "\n<p>See enum appointmentType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetType(Integer type)
     parameters:
@@ -2432,3 +2432,9 @@ references:
   name: NSVisibleFor
   nameWithType: NSVisibleFor
   fullName: CRMScript.NetServer.NSVisibleFor
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
+  isExternal: true
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
