--- a/docs/api-reference/CRMScript.NetServer.appointmentType.yml
+++ b/docs/api-reference/CRMScript.NetServer.appointmentType.yml
@@ -1,160 +1,160 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.appointmentType
-  commentId: T:CRMScript.NetServer.appointmentType
-  id: appointmentType
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
+  id: AppointmentType
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.appointmentType.Unknown
-  - CRMScript.NetServer.appointmentType.inDiary
-  - CRMScript.NetServer.appointmentType.inChecklist
-  - CRMScript.NetServer.appointmentType.Note
-  - CRMScript.NetServer.appointmentType.Document
-  - CRMScript.NetServer.appointmentType.SavedReport
-  - CRMScript.NetServer.appointmentType.BookingForDiary
-  - CRMScript.NetServer.appointmentType.BookingForChecklist
-  - CRMScript.NetServer.appointmentType.MergeDraft
-  - CRMScript.NetServer.appointmentType.MergeFinal
-  name: appointmentType
-  nameWithType: appointmentType
-  fullName: CRMScript.NetServer.appointmentType
+  - CRMScript.NetServer.AppointmentType.Unknown
+  - CRMScript.NetServer.AppointmentType.inDiary
+  - CRMScript.NetServer.AppointmentType.inChecklist
+  - CRMScript.NetServer.AppointmentType.Note
+  - CRMScript.NetServer.AppointmentType.Document
+  - CRMScript.NetServer.AppointmentType.SavedReport
+  - CRMScript.NetServer.AppointmentType.BookingForDiary
+  - CRMScript.NetServer.AppointmentType.BookingForChecklist
+  - CRMScript.NetServer.AppointmentType.MergeDraft
+  - CRMScript.NetServer.AppointmentType.MergeFinal
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.appointmentType.Unknown
-  commentId: F:CRMScript.NetServer.appointmentType.Unknown
-  id: appointmentType.Unknown
+  summary: "\nValue for the type field in the appointment table.\n"
+- uid: CRMScript.NetServer.AppointmentType.Unknown
+  commentId: F:CRMScript.NetServer.AppointmentType.Unknown
+  id: AppointmentType.Unknown
   langs:
   - crmscript
-  name: appointmentType.Unknown
-  nameWithType: appointmentType.Unknown
-  fullName: CRMScript.NetServer.appointmentType.Unknown
+  name: AppointmentType.Unknown
+  nameWithType: AppointmentType.Unknown
+  fullName: CRMScript.NetServer.AppointmentType.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: Unknown - used when initializing\n"
   syntax: 
     content: Unknown = 0
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.inDiary
-  commentId: F:CRMScript.NetServer.appointmentType.inDiary
-  id: appointmentType.inDiary
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.inDiary
+  commentId: F:CRMScript.NetServer.AppointmentType.inDiary
+  id: AppointmentType.inDiary
   langs:
   - crmscript
-  name: appointmentType.inDiary
-  nameWithType: appointmentType.inDiary
-  fullName: CRMScript.NetServer.appointmentType.inDiary
+  name: AppointmentType.inDiary
+  nameWithType: AppointmentType.inDiary
+  fullName: CRMScript.NetServer.AppointmentType.inDiary
   type: Field
-  summary: "\n1: inDiary\n"
+  summary: "\n1: Show in diary. If overdue or done today, show in checklist also.\n"
   syntax: 
     content: inDiary = 1
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.inChecklist
-  commentId: F:CRMScript.NetServer.appointmentType.inChecklist
-  id: appointmentType.inChecklist
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.inChecklist
+  commentId: F:CRMScript.NetServer.AppointmentType.inChecklist
+  id: AppointmentType.inChecklist
   langs:
   - crmscript
-  name: appointmentType.inChecklist
-  nameWithType: appointmentType.inChecklist
-  fullName: CRMScript.NetServer.appointmentType.inChecklist
+  name: AppointmentType.inChecklist
+  nameWithType: AppointmentType.inChecklist
+  fullName: CRMScript.NetServer.AppointmentType.inChecklist
   type: Field
-  summary: "\n2: inChecklist\n"
+  summary: "\n2: Appointment is a followup with no specific start time.\n"
   syntax: 
     content: inChecklist = 2
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.Note
-  commentId: F:CRMScript.NetServer.appointmentType.Note
-  id: appointmentType.Note
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.Note
+  commentId: F:CRMScript.NetServer.AppointmentType.Note
+  id: AppointmentType.Note
   langs:
   - crmscript
-  name: appointmentType.Note
-  nameWithType: appointmentType.Note
-  fullName: CRMScript.NetServer.appointmentType.Note
+  name: AppointmentType.Note
+  nameWithType: AppointmentType.Note
+  fullName: CRMScript.NetServer.AppointmentType.Note
   type: Field
-  summary: "\n3: Note\n"
+  summary: "\n3: Paperclip on diary, expands to post-it note when clicked.\n"
   syntax: 
     content: Note = 3
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.Document
-  commentId: F:CRMScript.NetServer.appointmentType.Document
-  id: appointmentType.Document
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.Document
+  commentId: F:CRMScript.NetServer.AppointmentType.Document
+  id: AppointmentType.Document
   langs:
   - crmscript
-  name: appointmentType.Document
-  nameWithType: appointmentType.Document
-  fullName: CRMScript.NetServer.appointmentType.Document
+  name: AppointmentType.Document
+  nameWithType: AppointmentType.Document
+  fullName: CRMScript.NetServer.AppointmentType.Document
   type: Field
-  summary: "\n4: Document\n"
+  summary: "\n4: Document of any kind, including outgoing, incoming, and email.\n"
   syntax: 
     content: Document = 4
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.SavedReport
-  commentId: F:CRMScript.NetServer.appointmentType.SavedReport
-  id: appointmentType.SavedReport
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.SavedReport
+  commentId: F:CRMScript.NetServer.AppointmentType.SavedReport
+  id: AppointmentType.SavedReport
   langs:
   - crmscript
-  name: appointmentType.SavedReport
-  nameWithType: appointmentType.SavedReport
-  fullName: CRMScript.NetServer.appointmentType.SavedReport
+  name: AppointmentType.SavedReport
+  nameWithType: AppointmentType.SavedReport
+  fullName: CRMScript.NetServer.AppointmentType.SavedReport
   type: Field
-  summary: "\n5: SavedReport\n"
+  summary: "\n5: Saved Report (not a Report Definition but the result of an actual report run).\n"
   syntax: 
     content: SavedReport = 5
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.BookingForDiary
-  commentId: F:CRMScript.NetServer.appointmentType.BookingForDiary
-  id: appointmentType.BookingForDiary
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.BookingForDiary
+  commentId: F:CRMScript.NetServer.AppointmentType.BookingForDiary
+  id: AppointmentType.BookingForDiary
   langs:
   - crmscript
-  name: appointmentType.BookingForDiary
-  nameWithType: appointmentType.BookingForDiary
-  fullName: CRMScript.NetServer.appointmentType.BookingForDiary
+  name: AppointmentType.BookingForDiary
+  nameWithType: AppointmentType.BookingForDiary
+  fullName: CRMScript.NetServer.AppointmentType.BookingForDiary
   type: Field
-  summary: "\n6: BookingForDiary\n"
+  summary: "\n6: Booking, made for diary. When accepted this will change type to inDiary.\n"
   syntax: 
     content: BookingForDiary = 6
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.BookingForChecklist
-  commentId: F:CRMScript.NetServer.appointmentType.BookingForChecklist
-  id: appointmentType.BookingForChecklist
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.BookingForChecklist
+  commentId: F:CRMScript.NetServer.AppointmentType.BookingForChecklist
+  id: AppointmentType.BookingForChecklist
   langs:
   - crmscript
-  name: appointmentType.BookingForChecklist
-  nameWithType: appointmentType.BookingForChecklist
-  fullName: CRMScript.NetServer.appointmentType.BookingForChecklist
+  name: AppointmentType.BookingForChecklist
+  nameWithType: AppointmentType.BookingForChecklist
+  fullName: CRMScript.NetServer.AppointmentType.BookingForChecklist
   type: Field
-  summary: "\n7: BookingForChecklist\n"
+  summary: "\n7: Booking, made for check list. When accepted this will change type to inChecklist.\n"
   syntax: 
     content: BookingForChecklist = 7
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.MergeDraft
-  commentId: F:CRMScript.NetServer.appointmentType.MergeDraft
-  id: appointmentType.MergeDraft
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.MergeDraft
+  commentId: F:CRMScript.NetServer.AppointmentType.MergeDraft
+  id: AppointmentType.MergeDraft
   langs:
   - crmscript
-  name: appointmentType.MergeDraft
-  nameWithType: appointmentType.MergeDraft
-  fullName: CRMScript.NetServer.appointmentType.MergeDraft
+  name: AppointmentType.MergeDraft
+  nameWithType: AppointmentType.MergeDraft
+  fullName: CRMScript.NetServer.AppointmentType.MergeDraft
   type: Field
-  summary: "\n8: MergeDraft\n"
+  summary: "\n8: Document is a template for mail-merge operations.\n"
   syntax: 
     content: MergeDraft = 8
-    type: CRMScript.NetServer.appointmentType
-- uid: CRMScript.NetServer.appointmentType.MergeFinal
-  commentId: F:CRMScript.NetServer.appointmentType.MergeFinal
-  id: appointmentType.MergeFinal
+    type: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.AppointmentType.MergeFinal
+  commentId: F:CRMScript.NetServer.AppointmentType.MergeFinal
+  id: AppointmentType.MergeFinal
   langs:
   - crmscript
-  name: appointmentType.MergeFinal
-  nameWithType: appointmentType.MergeFinal
-  fullName: CRMScript.NetServer.appointmentType.MergeFinal
+  name: AppointmentType.MergeFinal
+  nameWithType: AppointmentType.MergeFinal
+  fullName: CRMScript.NetServer.AppointmentType.MergeFinal
   type: Field
-  summary: "\n9: MergeFinal\n"
+  summary: "\n9: Document is a result of a mail-merge operations (there are probably many documents like this!).\n"
   syntax: 
     content: MergeFinal = 9
-    type: CRMScript.NetServer.appointmentType
+    type: CRMScript.NetServer.AppointmentType
 references:
-- uid: CRMScript.NetServer.appointmentType
-  commentId: T:CRMScript.NetServer.appointmentType
+- uid: CRMScript.NetServer.AppointmentType
+  commentId: T:CRMScript.NetServer.AppointmentType
   isExternal: true
-  name: appointmentType
-  nameWithType: appointmentType
-  fullName: CRMScript.NetServer.appointmentType
+  name: AppointmentType
+  nameWithType: AppointmentType
+  fullName: CRMScript.NetServer.AppointmentType
