#9 updated and linked to BookingType

--- a/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
@@ -612,7 +612,7 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetAssignmentStatus(Integer)
   type: Method
   summary: ""
-  remarks: "\n<p>See enum assignmentStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetAssignmentStatus(Integer assignmentStatus)
     parameters:
@@ -634,7 +634,7 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetBookingType(Integer)
   type: Method
   summary: ""
-  remarks: "\n<p>See enum bookingType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.BookingType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: Void SetBookingType(Integer bookingType)
     parameters:
@@ -1034,3 +1034,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.BookingType
+  commentId: T:CRMScript.NetServer.BookingType
+  isExternal: true
+  name: BookingType
+  nameWithType: BookingType
+  fullName: CRMScript.NetServer.BookingType
