--- a/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
@@ -1218,13 +1218,13 @@ items:
   fullName: CRMScript.NetServer.NSAppointment.SetAssignmentStatus(Integer)
   type: Method
   summary: "\nStatus if this appointment is in the process of being assigned to someone else\n"
-  remarks: "\n<p>See enum assignmentStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetAssignmentStatus(Integer assignmentStatus)
     parameters:
     - id: assignmentStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: "See <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>"
   example: 
   - "\n<pre><code>NSAppointment thing;\nInteger assignmentStatus;\nthing.SetAssignmentStatus(assignmentStatus);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointment.SetAssociateFullName(String)
