--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -1337,13 +1337,13 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentEntity.SetAssignmentStatus(Integer)
   type: Method
   summary: "\nStatus if this appointment is in the process of being assigned to someone else\n"
-  remarks: "\n<p>See enum assignmentStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetAssignmentStatus(Integer assignmentStatus)
     parameters:
     - id: assignmentStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: "See <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>"
   example: 
   - "\n<pre><code>NSAppointmentEntity thing;\nInteger assignmentStatus;\nthing.SetAssignmentStatus(assignmentStatus);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointmentEntity.SetAssociate()
@@ -1374,7 +1374,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentEntity.SetBookingType(Integer)
   type: Method
   summary: "\nThe type of booking the appointment represents\n"
-  remarks: "\n<p>See enum bookingType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.BookingType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetBookingType(Integer bookingType)
     parameters:
@@ -2438,3 +2438,9 @@ references:
   name: AppointmentType
   nameWithType: AppointmentType
   fullName: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.BookingType
+  commentId: T:CRMScript.NetServer.BookingType
+  isExternal: true
+  name: BookingType
+  nameWithType: BookingType
+  fullName: CRMScript.NetServer.BookingType
