--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -20,11 +20,11 @@ items:
   - CRMScript.NetServer.AppointmentPrivate
   - CRMScript.NetServer.AppointmentType
   - CRMScript.NetServer.archivedState
-  - CRMScript.NetServer.assignmentStatus
+  - CRMScript.NetServer.AssignmentStatus
   - CRMScript.NetServer.associateType
   - CRMScript.NetServer.baseStatus
   - CRMScript.NetServer.BatchTaskState
-  - CRMScript.NetServer.bookingType
+  - CRMScript.NetServer.BookingType
   - CRMScript.NetServer.calMethod
   - CRMScript.NetServer.calReplyStatus
   - CRMScript.NetServer.CautionWarning
@@ -734,18 +734,18 @@ references:
   name: AppointmentType
   nameWithType: AppointmentType
   fullName: CRMScript.NetServer.AppointmentType
-- uid: CRMScript.NetServer.assignmentStatus
-  commentId: T:CRMScript.NetServer.assignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus
+  commentId: T:CRMScript.NetServer.AssignmentStatus
   isExternal: true
-  name: assignmentStatus
-  nameWithType: assignmentStatus
-  fullName: CRMScript.NetServer.assignmentStatus
-- uid: CRMScript.NetServer.bookingType
-  commentId: T:CRMScript.NetServer.bookingType
+  name: AssignmentStatus
+  nameWithType: AssignmentStatus
+  fullName: CRMScript.NetServer.AssignmentStatus
+- uid: CRMScript.NetServer.BookingType
+  commentId: T:CRMScript.NetServer.BookingType
   isExternal: true
-  name: bookingType
-  nameWithType: bookingType
-  fullName: CRMScript.NetServer.bookingType
+  name: BookingType
+  nameWithType: BookingType
+  fullName: CRMScript.NetServer.BookingType
 - uid: CRMScript.NetServer.invitationStatus
   commentId: T:CRMScript.NetServer.invitationStatus
   isExternal: true
