--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1174,16 +1174,16 @@ items:
       href: CRMScript.NetServer.AppointmentType.yml
     - name: Enum archivedState
       href: CRMScript.NetServer.archivedState.yml
-    - name: Enum assignmentStatus
-      href: CRMScript.NetServer.assignmentStatus.yml
+    - name: AssignmentStatus
+      href: CRMScript.NetServer.AssignmentStatus.yml
     - name: Enum associateType
       href: CRMScript.NetServer.associateType.yml
     - name: Enum baseStatus
       href: CRMScript.NetServer.baseStatus.yml
     - name: Enum BatchTaskState
       href: CRMScript.NetServer.BatchTaskState.yml
-    - name: Enum bookingType
-      href: CRMScript.NetServer.bookingType.yml
+    - name: BookingType
+      href: CRMScript.NetServer.BookingType.yml
     - name: Enum calMethod
       href: CRMScript.NetServer.calMethod.yml
     - name: Enum calReplyStatus
