--- a/docs/api-reference/CRMScript.NetServer.assignmentStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.assignmentStatus.yml
@@ -1,90 +1,91 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.assignmentStatus
-  commentId: T:CRMScript.NetServer.assignmentStatus
-  id: assignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus
+  # Same as SuperOffice.Data.AssignmentStatus
+  commentId: T:CRMScript.NetServer.AssignmentStatus
+  id: AssignmentStatus
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.assignmentStatus.Unknown
-  - CRMScript.NetServer.assignmentStatus.None
-  - CRMScript.NetServer.assignmentStatus.Assigning
-  - CRMScript.NetServer.assignmentStatus.Seen
-  - CRMScript.NetServer.assignmentStatus.Declined
-  name: assignmentStatus
-  nameWithType: assignmentStatus
-  fullName: CRMScript.NetServer.assignmentStatus
+  - CRMScript.NetServer.AssignmentStatus.Unknown
+  - CRMScript.NetServer.AssignmentStatus.None
+  - CRMScript.NetServer.AssignmentStatus.Assigning
+  - CRMScript.NetServer.AssignmentStatus.Seen
+  - CRMScript.NetServer.AssignmentStatus.Declined
+  name: AssignmentStatus
+  nameWithType: AssignmentStatus
+  fullName: CRMScript.NetServer.AssignmentStatus
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.assignmentStatus.Unknown
-  commentId: F:CRMScript.NetServer.assignmentStatus.Unknown
-  id: assignmentStatus.Unknown
+  summary: "\nStatus if this appointment is in the process of being assigned to someone else\n"
+- uid: CRMScript.NetServer.AssignmentStatus.Unknown
+  commentId: F:CRMScript.NetServer.AssignmentStatus.Unknown
+  id: AssignmentStatus.Unknown
   langs:
   - crmscript
-  name: assignmentStatus.Unknown
-  nameWithType: assignmentStatus.Unknown
-  fullName: CRMScript.NetServer.assignmentStatus.Unknown
+  name: AssignmentStatus.Unknown
+  nameWithType: AssignmentStatus.Unknown
+  fullName: CRMScript.NetServer.AssignmentStatus.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: Unknown - used when initializing\n"
   syntax: 
     content: Unknown = 0
-    type: CRMScript.NetServer.assignmentStatus
-- uid: CRMScript.NetServer.assignmentStatus.None
-  commentId: F:CRMScript.NetServer.assignmentStatus.None
-  id: assignmentStatus.None
+    type: CRMScript.NetServer.AssignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus.None
+  commentId: F:CRMScript.NetServer.AssignmentStatus.None
+  id: AssignmentStatus.None
   langs:
   - crmscript
-  name: assignmentStatus.None
-  nameWithType: assignmentStatus.None
-  fullName: CRMScript.NetServer.assignmentStatus.None
+  name: AssignmentStatus.None
+  nameWithType: AssignmentStatus.None
+  fullName: CRMScript.NetServer.AssignmentStatus.None
   type: Field
-  summary: "\n1: None\n"
+  summary: "\n1: All appointments not in the process of being assigned to someone else\n"
   syntax: 
     content: None = 1
-    type: CRMScript.NetServer.assignmentStatus
-- uid: CRMScript.NetServer.assignmentStatus.Assigning
-  commentId: F:CRMScript.NetServer.assignmentStatus.Assigning
-  id: assignmentStatus.Assigning
+    type: CRMScript.NetServer.AssignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus.Assigning
+  commentId: F:CRMScript.NetServer.AssignmentStatus.Assigning
+  id: AssignmentStatus.Assigning
   langs:
   - crmscript
-  name: assignmentStatus.Assigning
-  nameWithType: assignmentStatus.Assigning
-  fullName: CRMScript.NetServer.assignmentStatus.Assigning
+  name: AssignmentStatus.Assigning
+  nameWithType: AssignmentStatus.Assigning
+  fullName: CRMScript.NetServer.AssignmentStatus.Assigning
   type: Field
-  summary: "\n11: Assigning\n"
+  summary: "\n11: Appointment in the process of being assigned to someone else\n"
   syntax: 
     content: Assigning = 11
-    type: CRMScript.NetServer.assignmentStatus
-- uid: CRMScript.NetServer.assignmentStatus.Seen
-  commentId: F:CRMScript.NetServer.assignmentStatus.Seen
-  id: assignmentStatus.Seen
+    type: CRMScript.NetServer.AssignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus.Seen
+  commentId: F:CRMScript.NetServer.AssignmentStatus.Seen
+  id: AssignmentStatus.Seen
   langs:
   - crmscript
-  name: assignmentStatus.Seen
-  nameWithType: assignmentStatus.Seen
-  fullName: CRMScript.NetServer.assignmentStatus.Seen
+  name: AssignmentStatus.Seen
+  nameWithType: AssignmentStatus.Seen
+  fullName: CRMScript.NetServer.AssignmentStatus.Seen
   type: Field
-  summary: "\n12: Seen\n"
+  summary: "\n12: Appointment where the party requested to take ownership of the appointment or task has observed the request, but not yet accepted or declined the request.\n"
   syntax: 
     content: Seen = 12
-    type: CRMScript.NetServer.assignmentStatus
-- uid: CRMScript.NetServer.assignmentStatus.Declined
-  commentId: F:CRMScript.NetServer.assignmentStatus.Declined
-  id: assignmentStatus.Declined
+    type: CRMScript.NetServer.AssignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus.Declined
+  commentId: F:CRMScript.NetServer.AssignmentStatus.Declined
+  id: AssignmentStatus.Declined
   langs:
   - crmscript
-  name: assignmentStatus.Declined
-  nameWithType: assignmentStatus.Declined
-  fullName: CRMScript.NetServer.assignmentStatus.Declined
+  name: AssignmentStatus.Declined
+  nameWithType: AssignmentStatus.Declined
+  fullName: CRMScript.NetServer.AssignmentStatus.Declined
   type: Field
-  summary: "\n13: Declined\n"
+  summary: "\n13: Appointment where the person requested to take ownership has declined.\n"
   syntax: 
     content: Declined = 13
-    type: CRMScript.NetServer.assignmentStatus
+    type: CRMScript.NetServer.AssignmentStatus
 references:
-- uid: CRMScript.NetServer.assignmentStatus
-  commentId: T:CRMScript.NetServer.assignmentStatus
+- uid: CRMScript.NetServer.AssignmentStatus
+  commentId: T:CRMScript.NetServer.AssignmentStatus
   isExternal: true
-  name: assignmentStatus
-  nameWithType: assignmentStatus
-  fullName: CRMScript.NetServer.assignmentStatus
+  name: AssignmentStatus
+  nameWithType: AssignmentStatus
+  fullName: CRMScript.NetServer.AssignmentStatus
